# smart-teams-ordering

./: .gitignore  Cargo.toml  LICENSE  README.md
back/: Cargo.toml
front/: Cargo.toml  Dioxus.toml
front/assets/: main.css
front/src/: local_storage.rs  main.rs  routes.rs
front/src/components/: header.rs  home.rs  mod.rs  teams.rs
