[package]
name = "front"
version = "0.1.0"
authors = ["remi.espie"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.3", features = ["web", "router"] }

# Debug
dioxus-logger = "0.6.2"
gloo-storage = "0.3.0"
serde = { version = "1.0.217", features = ["derive"] }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
